--- a/styles.css
+++ b/styles.css
@@ -11,22 +11,26 @@
   font-weight: bold;
 }
 
+/* VARIABLES */
+:root{
+  --white: #FFFFFF;
+  --black: #000000;
+  --gradient-color1: #ee7752;
+  --gradient-color2: #e73c7e; 
+  --gradient-color3: #db5779;
+}
+
 /* ELEMENT SELECTORS */
 body{
-  padding-top: 5vh;
+  padding-top: 2.5vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: black;
-  color: white;
+  background-color: var(--black);
+  color: var(--white);
   font-family: "Nexa", sans-serif;
   font-weight: bold;
-}
-
-input{
-  width: 400px;
-  padding: .75rem;
 }
 
 header{
@@ -42,7 +46,16 @@ main{
   gap: 3rem;
 }
 
+input{
+  width: 400px;
+  padding: .75rem;
+}
+
 /* ID SELECTORS */
+#logo{
+  width: 50px;
+}
+
 #search{
   display: flex;
   position: relative;
@@ -59,15 +72,15 @@ main{
   height: 100%;
   right: 0;
   width:40px;
-  color: white;
+  color: var(--white);
   animation: gradient 5s linear infinite;
-  background-image: linear-gradient(90deg,#ee7752,#e73c7e,#db5779,#ee7752,#e73c7e);
+  background-image: linear-gradient(90deg, var(--gradient-color1),var(--gradient-color2),var(--gradient-color3),var(--gradient-color1),var(--gradient-color2));
   background-size: 400% 100%;
   transform: scaleX(-1);
   font-size: 1.25rem;
   border: none;
   border-radius: 5px 0px 0px 5px;
-  border: 2px solid white;
+  border: 2px solid var(--white);
   cursor: pointer;
   transition: font-size .3s;
 }
@@ -77,9 +90,6 @@ main{
   font-size: 1.45rem;
 }
 
-#logo{
-  width: 50px;
-}
 
 /* ANIMATION */
 @keyframes gradient {
